<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Buckling</string>
    <string name="learn_about_buckling_beam">Learn about buckling beam</string>
    <string name="wiki_buckling">http://en.wikipedia.org/wiki/Buckling</string>
    <string name="calculate_the_critical_force_for_the_beam">Calculate the critical force for the beam</string>
    <string name="_1_select_the_type_of_fastening_the_beam_">1) Select the type of fastening the beam:</string>
    <string name="select">Select</string>
    <string name="or">or</string>
    <string name="fill_in">Fill in</string>
    <string name="_2_select_the_material_">2) Select the material:</string>
    <string name="_3_fill_in_the_lenght_of_the_beam_">3) Fill in the lenght of the beam [m]:</string>
    <string name="calculate">CALCULATE</string>
    <string name="critical_force_for_your_beam_">Critical force for your beam:</string>
    <string name="no_result_for_this_beam">no result for this beam</string>
    <string name="_4_fill_in_the_beam_cross_section_radius">4) Fill in the beam cross section radius [m]:</string>
    <string name="_5_fill_in_the_beam_mass_">5) Fill in the beam mass [kg]:</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="select_fastening">Select fastening</string>
    <string name="fastening_factor_can_t_be_empty_">Fastening Factor can\'t be empty!</string>
    <string name="select_material">Select material</string>
    <string name="fill_in_young_modulus">Fill in young modulus</string>
    <string name="young_modulus_can_t_be_empty_">Young Modulus can\'t be empty!</string>
    <string name="you_must_fill_all_fields_in_order_to_calculate_">You must fill all fields in order to calculate!</string>
    <string name="fill_in_fastening_factor">Fill in fastening factor</string>

</resources>